# vut-ial-project2

./: CMakeLists.txt  Makefile  README.md
c016/: Makefile  c016-test.c  c016-test.output  c016.c  c016.h
c401/: Makefile  c401-test.c  c401-test.output  c401.c  c401.h
c402/: c402-test.c  c402.c  c402.h
hodnoceni/tests/c401/: c401-test.c
hodnoceni/tests/c402/: c402-test.c
hodnoceni/xharmi00/: c016.h  c401.c  c401.h  c402-test.output.results  c402.h
