# Author: Dominik Harmim <xharmi00@stud.fit.vutbr.cz>

CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

SET(CMAKE_C_COMPILER gcc)
SET(CMAKE_C_FLAGS "-Wall -std=c99 -pedantic -g")

IF(${PROJECT})
	PROJECT(${PROJECT})
ELSE()
	PROJECT(c016)
#	PROJECT(c401)
#	PROJECT(c402)
ENDIF()

IF(${PROJECT_NAME} STREQUAL c016)

	SET(SOURCE_FILES c016/c016-test.c c016/c016.c c016/c016.h)

ELSEIF(${PROJECT_NAME} STREQUAL c401)

	SET(SOURCE_FILES c401/c401-test.c c401/c401.c c401/c401.h)

ELSEIF(${PROJECT_NAME} STREQUAL c402)

	SET(SOURCE_FILES c402/c402-test.c c402/c402.c c402/c402.h)

ENDIF()

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})
